<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/status">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="autonext_status"
            app:summary="@string/disable_auto_status_sum"
            app:title="@string/disable_auto_status" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="copystatus"
            app:summary="@string/enable_copy_status_sum"
            app:title="@string/enable_copy_status" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="toast_viewed_status"
            app:summary="@string/toast_on_viewed_status_sum"
            app:title="@string/toast_on_viewed_status" />


        <rikka.material.preference.MaterialSwitchPreference
            app:key="igstatus"
            app:summary="@string/igstatus_on_home_screen_sum"
            app:title="@string/igstatus_on_home_screen" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="channels"
            app:summary="@string/disable_channels_sum"
            app:title="@string/disable_channels" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="removechannel_rec"
            app:summary="@string/remove_channel_recomendations_sum"
            app:title="@string/remove_channel_recomendations" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="disable_ads"
            app:summary="@string/disable_ads_sum"
            app:title="@string/disable_ads" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/status_style_entries"
            android:entryValues="@array/status_style_values"
            app:key="status_style"
            app:summary="@string/style_of_stories_status_sum"
            app:title="@string/style_of_stories_status" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="oldstatus"
            app:summary="@string/old_statuses_sum"
            app:title="@string/old_statuses" />



        <rikka.material.preference.MaterialSwitchPreference
            app:key="auto_status_forward"
            app:summary="@string/auto_status_forward_sum"
            app:title="@string/auto_status_forward" />

        <com.waenhancer.preference.StatusForwardRulesPreference
            app:dependency="auto_status_forward"
            app:key="auto_status_forward_rules_pref"
            app:title="@string/auto_status_forward_rules" />


    </PreferenceCategory>

    <PreferenceCategory
        app:key="customize_status_view_category"
        app:iconSpaceReserved="false"
        app:title="@string/customize_status_view_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="remove_status_bottom_tile"
            app:summary="@string/remove_status_bottom_tile_sum"
            app:title="@string/remove_status_bottom_tile" />


        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="remove_status_quick_reactions"
            app:summary="@string/remove_status_quick_reactions_sum"
            app:title="@string/remove_status_quick_reactions" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="remove_status_heart_button"
            app:summary="@string/remove_status_heart_button_sum"
            app:title="@string/remove_status_heart_button" />





    </PreferenceCategory>

</PreferenceScreen>
