<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuitem_save"
        android:icon="@drawable/download"
        android:showAsAction="ifRoom"
        android:title="@string/save" />
    <item
        android:id="@+id/menuitem_test_theme"
        android:title="@string/css_menu_test_theme" />
    <item
        android:id="@+id/menuitem_rollback_theme"
        android:title="@string/css_menu_rollback" />
    <item
        android:id="@+id/menuitem_css_safe_mode"
        android:title="@string/css_menu_safe_mode_start" />
    <item
        android:id="@+id/menuitem_css_safe_mode_exit"
        android:title="@string/css_menu_safe_mode_exit" />
    <item
        android:id="@+id/menuitem_import_image"
        android:title="@string/import_image" />
    <item
        android:id="@+id/menuitem_export"
        android:title="@string/export_as_zip" />
    <item
        android:id="@+id/menuitem_clear"
        android:title="@string/clear" />
    <item
        android:id="@+id/menuitem_exit"
        android:title="@string/exit" />
</menu>